crates/cli/tests/snapshots/run_node_test__typescript__creates_missing_tsconfig-2.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 1126
expression: "read_to_string(fixture.path().join(\"create-config/tsconfig.json\")).unwrap()"
---
{
  "extends": "../tsconfig.options.json",
  "include": [
    "**/*"
  ],
  "references": []
}

