crates/cli/tests/snapshots/run_node_test__typescript__creates_missing_tsconfig.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 1123
expression: "read_to_string(fixture.path().join(\"tsconfig.json\")).unwrap()"
---
{
  "files": [],
  "references": [
    {
      "path": "create-config"
    }
  ]
}

