crates/cli/tests/snapshots/run_node_test__typescript__doesnt_route_out_dir_to_cache.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 1136
expression: "read_to_string(fixture.path().join(\"out-dir-routing/tsconfig.json\")).unwrap()"
---
{
  "compilerOptions": {
    "outDir": "./dts"
  }
}

