crates/cli/tests/snapshots/run_node_test__typescript__routes_out_dir_to_cache_when_no_compiler_options.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 1136
expression: "read_to_string(fixture.path().join(\"out-dir-routing-no-options/tsconfig.json\")).unwrap()"
---
{
  "compilerOptions": {
    "outDir": "../.moon/cache/types/out-dir-routing-no-options"
  }
}

