crates/cli/tests/snapshots/run_node_test__typescript__syncs_ref_to_root_config.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 967
expression: synced_root
---
{
  "files": [],
  "references": [
    {
      "path": "create-config"
    }
  ]
}

